Fix h2 font size
Fixed font size which was too big.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,7 +39,7 @@
 
 .index-page-h2 {
     font-family: "Montserrat";
-    font-size: 3rem;
+    font-size: 2rem;
     line-height: 1;
 }
 
